--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     <h1>
       hello world
     </h1>
+    <div class="section-pricing">
+      <h1>
+        Pricing
+      </h1>
+    </div>
   </body>
 </html>
