--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <meta content="" name="author" />
     <meta content="" name="keywords" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <link href="./css/style.css" rel="stylesheet" type="text/css" />
+    <link href="./images/favicon.png" rel="icon" type="image/png" />
+    <link href="./style/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <nav class="navigation-component">
-      <a>Remoto</a><a>Product</a><a>Pricing</a><a class="button">Get Started</a>
+    <nav class="navigation-menu">
+      <a>Remoto</a><a>Product</a><a>Pricing</a><a class="button -small -small">Get Started</a>
     </nav>
     <section class="section-hero">
       <h1>
@@ -59,7 +60,7 @@
         <h3>
           $0
         </h3>
-        <a class="button">Start Free</a>
+        <a class="button -small">Start Free</a>
         <ul>
           <li>
             Free Intra-company calls worldwide
@@ -79,7 +80,7 @@
         <h3>
           $20
         </h3>
-        <span>per active user, per month</span><a class="button">Buy Standard</a>
+        <span>per active user, per month</span><a class="button -small">Buy Standard</a>
         <ul>
           <li>
             All features from the Free plan
@@ -105,7 +106,7 @@
         <h3>
           $50
         </h3>
-        <span>per active user, per month</span><a class="button">Buy Enterprise</a>
+        <span>per active user, per month</span><a class="button -small">Buy Enterprise</a>
         <ul>
           <li>
             All features from the Standard plan
@@ -123,6 +124,9 @@
             Advanced IVR
           </li>
         </ul>
+      </div>
+      <div class="footnote">
+        <span>toll free excluded</span><span>price per minute</span>
       </div>
     </section>
     <section class="section-letter">
