Basic paragraph typography setup

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
       </div>
     </section>
     <section class="section-letter">
+      <div class="envelope"></div>
       <div class="letter">
         <h1>
           A Letter from Fred
@@ -164,6 +165,9 @@
         <p>
           P.S.  If you want to talk, just reach me at <a>http://remoto.me/fred@remoto.</a>
         </p>
+      </div>
+      <div class="button">
+        Get Started
       </div>
     </section>
   </body>
