Adjustments on section-letter

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class="navigation-menu">
-      <a>Remoto</a><a>Product</a><a>Pricing</a><a class="button -small -small">Get Started</a>
+      <a>Remoto</a><a>Product</a><a>Pricing</a><a class="button -small -small">Start Free</a>
     </nav>
     <section class="section-hero">
       <h1>
@@ -21,7 +21,7 @@
       <h4>
         Remoto is an enjoyable and productive solution for sales and support teams to communicate with customers.
       </h4>
-      <a class="button">Get Started</a>
+      <a class="button">Start Free</a>
     </section>
     <section class="section-features">
       <div class="feature">
@@ -167,7 +167,7 @@
         </p>
       </div>
       <div class="button">
-        Get Started
+        Start Free
       </div>
     </section>
   </body>
