Implement section-pricing layout

--- a/index.html
+++ b/index.html
@@ -53,80 +53,96 @@
       <h1>
         Plans that suit your needs
       </h1>
-      <div class="plan">
-        <h2>
-          Free
-        </h2>
-        <h3>
-          $0
-        </h3>
-        <a class="button -small">Start Free</a>
-        <ul>
-          <li>
-            Free Intra-company calls worldwide
-          </li>
-          <li>
-            Unlimited groups
-          </li>
-          <li>
-            10k message storage
-          </li>
-        </ul>
-      </div>
-      <div class="plan">
-        <h2>
-          Standard
-        </h2>
-        <h3>
-          $20
-        </h3>
-        <span>per active user, per month</span><a class="button -small">Buy Standard</a>
-        <ul>
-          <li>
-            All features from the Free plan
-          </li>
-          <li>
-            Toll free number
-          </li>
-          <li>
-            1 year message storage
-          </li>
-          <li>
-            Unlimited inbound calls*
-          </li>
-          <li>
-            Outbound calls**
-          </li>
-        </ul>
-      </div>
-      <div class="plan">
-        <h2>
-          Enterprise
-        </h2>
-        <h3>
-          $50
-        </h3>
-        <span>per active user, per month</span><a class="button -small">Buy Enterprise</a>
-        <ul>
-          <li>
-            All features from the Standard plan
-          </li>
-          <li>
-            Call Queues
-          </li>
-          <li>
-            Unlimited message storage
-          </li>
-          <li>
-            Compliance Exports for all messages
-          </li>
-          <li>
-            Advanced IVR
-          </li>
-        </ul>
+      <div class="plans">
+        <div class="plan">
+          <h2 class="name">
+            Free
+          </h2>
+          <h3 class="price">
+            $0
+          </h3>
+          <p class="note">
+            Ta-dah! 🎉
+          </p>
+          <a class="button -small">Start Free</a>
+          <ul class="features">
+            <li>
+              Free Intra-company calls worldwide
+            </li>
+            <li>
+              10k message storage
+            </li>
+            <li>
+              Unlimited groups
+            </li>
+          </ul>
+        </div>
+        <div class="plan">
+          <h2 class="name">
+            Standard
+          </h2>
+          <h3 class="price">
+            $20
+          </h3>
+          <p class="note">
+            per active user, per month
+          </p>
+          <a class="button -small">Buy Standard</a>
+          <ul class="features">
+            <li>
+              All features from the Free plan
+            </li>
+            <li>
+              1 year message storage
+            </li>
+            <li>
+              Toll free number
+            </li>
+            <li>
+              Unlimited inbound calls*
+            </li>
+            <li>
+              Outbound calls**
+            </li>
+          </ul>
+        </div>
+        <div class="plan">
+          <h2 class="name">
+            Enterprise
+          </h2>
+          <h3 class="price">
+            $50
+          </h3>
+          <p class="note">
+            per active user, per month
+          </p>
+          <a class="button -small">Buy Enterprise</a>
+          <ul class="features">
+            <li>
+              All features from the Standard plan
+            </li>
+            <li>
+              Unlimited message storage
+            </li>
+            <li>
+              Call Queues
+            </li>
+            <li>
+              Compliance Exports for all messages
+            </li>
+            <li>
+              Advanced IVR
+            </li>
+          </ul>
+        </div>
       </div>
       <div class="footnote">
-        <span>toll free excluded</span><span>price per minute</span>
+        <p>
+          * toll free excluded
+        </p>
+        <p>
+          ** price per minute
+        </p>
       </div>
     </section>
     <section class="section-letter">
@@ -163,7 +179,7 @@
           Fred Guth, Founder & CEO
         </p>
         <p>
-          P.S.  If you want to talk, just reach me at <a>http://remoto.me/fred@remoto.</a>
+          P.S.  If you want to talk, just reach me at <a href="http://alpha.remoto.me/fred@remoto">alpha.remoto.me/fred@remoto.</a>
         </p>
       </div>
       <div class="button">
