--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <link href="./style/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <nav class="navigation-menu">
-      <a>Remoto</a><a>Product</a><a>Pricing</a><a class="button -small -small">Start Free</a>
+    <nav class="navigation-menu" id="nav">
+      <a href="#start">Remoto</a><a class="link">800-736-6860</a><a class="button -tiny">Start Free</a><a class="link" href="#pricing">Pricing</a><a class="link" href="#product">Product</a>
     </nav>
-    <section class="section-hero">
+    <section class="section-hero" id="start">
       <h1>
-        Keep your team close and your clients closer
+        Keep your team close  and your clients closer
       </h1>
       <h4>
         Remoto is an enjoyable and productive solution for sales and support teams to communicate with customers.
       </h4>
       <a class="button">Start Free</a>
     </section>
-    <section class="section-features">
+    <section class="section-features" id="product">
       <div class="feature">
         <h2>
           Your team on the same page
@@ -49,7 +49,7 @@
         </p>
       </div>
     </section>
-    <section class="section-pricing">
+    <section class="section-pricing" id="pricing">
       <h1>
         Plans that suit your needs
       </h1>
@@ -186,5 +186,6 @@
         Start Free
       </div>
     </section>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
