Simplify navigation menu

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class="navigation-menu" id="nav">
-      <a href="#start">Remoto</a><a class="link">800-736-6860</a><a class="button -tiny">Start Free</a><a class="link" href="#pricing">Pricing</a><a class="link" href="#product">Product</a>
+      <a href="#start">Remoto</a><a class="link">800-736-6860</a><a class="link" href="#pricing">Pricing</a><a class="link" href="#product">Product</a>
     </nav>
     <section class="section-hero" id="start">
       <h1>
@@ -21,7 +21,7 @@
       <h4>
         Remoto is an enjoyable and productive solution for sales and support teams to communicate with customers.
       </h4>
-      <a class="button">Start Free</a>
+      <a class="button" href="#">Start Free</a>
     </section>
     <section class="section-features" id="product">
       <div class="feature">
@@ -64,7 +64,7 @@
           <p class="note">
             Ta-dah! 🎉
           </p>
-          <a class="button -small">Start Free</a>
+          <a class="button -small" href="#">Start Free</a>
           <ul class="features">
             <li>
               Free Intra-company calls worldwide
@@ -87,7 +87,7 @@
           <p class="note">
             per active user, per month
           </p>
-          <a class="button -small">Buy Standard</a>
+          <a class="button -small" href="#">Buy Standard</a>
           <ul class="features">
             <li>
               All features from the Free plan
@@ -116,7 +116,7 @@
           <p class="note">
             per active user, per month
           </p>
-          <a class="button -small">Buy Enterprise</a>
+          <a class="button -small" href="#">Buy Enterprise</a>
           <ul class="features">
             <li>
               All features from the Standard plan
@@ -182,7 +182,7 @@
           P.S.  If you want to talk, just reach me at <a href="http://alpha.remoto.me/fred@remoto">alpha.remoto.me/fred@remoto.</a>
         </p>
       </div>
-      <div class="button">
+      <div class="button" href="#">
         Start Free
       </div>
     </section>
