Call to action page basic structure

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <link href="./style/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <nav class="navigation-menu" id="nav">
-      <a href="#start">Remoto</a><a class="link">800-736-6860</a><a class="link" href="#pricing">Pricing</a><a class="link" href="#product">Product</a>
+    <nav class="navigation-menu">
+      <a>Remoto</a><a class="link">800-736-6860</a><a class="link" href="#pricing">Pricing</a><a class="link" href="#product">Product</a>
     </nav>
-    <section class="section-hero" id="start">
+    <section class="section-hero">
       <h1>
         Keep your team close  and your clients closer
       </h1>
       <h4>
         Remoto is an enjoyable and productive solution for sales and support teams to communicate with customers.
       </h4>
-      <a class="button" href="#">Start Free</a>
+      <a class="button">Start Free</a>
     </section>
     <section class="section-features" id="product">
       <div class="feature">
@@ -64,7 +64,7 @@
           <p class="note">
             Ta-dah! 🎉
           </p>
-          <a class="button -small" href="#">Start Free</a>
+          <a class="button -small">Start Free</a>
           <ul class="features">
             <li>
               Free Intra-company calls worldwide
@@ -87,7 +87,7 @@
           <p class="note">
             per active user, per month
           </p>
-          <a class="button -small" href="#">Buy Standard</a>
+          <a class="button -small">Buy Standard</a>
           <ul class="features">
             <li>
               All features from the Free plan
@@ -116,7 +116,7 @@
           <p class="note">
             per active user, per month
           </p>
-          <a class="button -small" href="#">Buy Enterprise</a>
+          <a class="button -small">Buy Enterprise</a>
           <ul class="features">
             <li>
               All features from the Standard plan
@@ -182,10 +182,24 @@
           P.S.  If you want to talk, just reach me at <a href="http://alpha.remoto.me/fred@remoto">alpha.remoto.me/fred@remoto.</a>
         </p>
       </div>
-      <div class="button" href="#">
+      <div class="button">
         Start Free
       </div>
     </section>
+    <div class="cta-page">
+      <h1>
+        We are happy to know you are interested
+      </h1>
+      <p>
+        Remoto is still being developed, but if you want to be one of the beta testers send us your email and we'll get you an invite ;)
+      </p>
+      <form>
+        <label for="email">Your email</label><input id="email" placeholder="yourname@company.com" type="text" /><input class="button" type="submit" value="Send" />
+      </form>
+      <div id="close-cta">
+        Close
+      </div>
+    </div>
     <script src="js/scripts.js"></script>
   </body>
 </html>
