Adjustments to call to action page

--- a/index.html
+++ b/index.html
@@ -187,17 +187,19 @@
       </div>
     </section>
     <div class="cta-page">
-      <h1>
-        We are happy to know you are interested
-      </h1>
-      <p>
-        Remoto is still being developed, but if you want to be one of the beta testers send us your email and we'll get you an invite ;)
-      </p>
-      <form>
-        <label for="email">Your email</label><input id="email" placeholder="yourname@company.com" type="text" /><input class="button" type="submit" value="Send" />
-      </form>
-      <div id="close-cta">
-        Close
+      <div class="container">
+        <h1>
+          We are happy to know you are interested
+        </h1>
+        <p>
+          Remoto is still being developed, but if you want to be one of the beta testers send us your email and we'll get you an invite ;)
+        </p>
+        <form>
+          <label for="email">Your email</label><input id="email" placeholder="yourname@company.com" type="text" /><input class="button" type="submit" value="Send" />
+        </form>
+        <div id="close-cta">
+          Close
+        </div>
       </div>
     </div>
     <script src="js/scripts.js"></script>
