--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         Keep your team close  and your clients closer
       </h1>
       <h4>
-        Remoto is an enjoyable and productive solution for sales and support teams to communicate with customers.
+        Remoto is an enjoyable and productive solution for sales and support teams communicate with customers.
       </h4>
       <a class="button">Start Free</a>
     </section>
@@ -29,15 +29,15 @@
           Your team on the same page
         </h2>
         <p>
-          Great customer communication relies on internal coordination. With Remoto, your team share a common view of all customer interactions and stay always in sync.
+          Great customer communication relies on internal coordination. With Remoto, your team shares a common view of all customer interactions and stays always in sync.
         </p>
       </div>
       <div class="feature">
         <h2>
-          Freedom from the desk phone  
+          Freedom from the desk phone
         </h2>
         <p>
-          Remoto lets you make and receive calls with your business numbers, from your laptop or mobile. Easily transfer calls and create conferences, no pins or numbers to memorize. 
+          Remoto lets you make and receive calls with your business numbers, from your laptop or mobile. Easily transfer calls and create conferences, no pins or numbers to memorize, no cheat sheet clutering your desk.
         </p>
       </div>
       <div class="feature">
@@ -62,7 +62,7 @@
             $0
           </h3>
           <p class="note">
-            Ta-dah! 🎉
+            Yeah! 🎉
           </p>
           <a class="button -small">Start Free</a>
           <ul class="features">
@@ -70,7 +70,7 @@
               Free Intra-company calls worldwide
             </li>
             <li>
-              10k message storage
+              1 month message storage
             </li>
             <li>
               Unlimited groups
@@ -79,7 +79,7 @@
         </div>
         <div class="plan">
           <h2 class="name">
-            Standard
+            Professional
           </h2>
           <h3 class="price">
             $20
@@ -87,7 +87,7 @@
           <p class="note">
             per active user, per month
           </p>
-          <a class="button -small">Buy Standard</a>
+          <a class="button -small">Buy Professional</a>
           <ul class="features">
             <li>
               All features from the Free plan
@@ -119,13 +119,16 @@
           <a class="button -small">Buy Enterprise</a>
           <ul class="features">
             <li>
-              All features from the Standard plan
+              All features from the Professional plan
             </li>
             <li>
               Unlimited message storage
             </li>
             <li>
               Call Queues
+            </li>
+            <li>
+              Bring Your Own Carrier
             </li>
             <li>
               Compliance Exports for all messages
@@ -155,22 +158,19 @@
           Save yourself.  Save the world.
         </p>
         <p>
-          Life is short and the world is warming. What can you do about it? I bet you already are:  Remoto Remote working.
+          Life is short and the world is warming. What can you do about it? I bet you already are:  --Remoto-- Remote working.
         </p>
         <p>
-          The nature of work has changed from a place you used to go to something you do with your mobile or laptop from anywhere and everybody became a remote worker whether they realize it or not.  Working remotely allows us to be there for the ones we love. It allow us to see the world, without ever having to commute. 
+          The nature of work has changed from a place you used to go to something you do with your mobile or laptop from anywhere. Everybody became a remote worker whether they realize it or not.  Working remotely allows us to be there for the ones we love and see the world, without ever having to commute.
         </p>
         <p>
-          Still, it is hard to keep everybody in sync when people don't bump into each other in the water-cooler. Guess what… even for people that meet in the office, effective communication doesn't just happen.
+          Still, it is hard to keep everybody in sync when people don't bump into each other in the water-cooler. Guess what… even for people that meet in the office, effective communication doesn't just happen. How to keep a coherent customer communication when it happens by email, phone or messaging apps, and involve several people in your organization?
         </p>
         <p>
-          How to keep a coherent customer communication when it happens by email, phone or messaging apps, and involve several people in your organization? 
+          This is a problem I had myself and so did several professionals we interviewed. Remoto's goal is to allow you to communicate better with your customers and your team, and prove that people don't need to be in the same room to be on the same page.
         </p>
         <p>
-          This is a problem I had myself in my previous companies and so did several professionals we interviewed. Remoto goal is to allow you to communicate better with you customers and your team, and convince your company that people don't need to be in the same room to be on the same page.
-        </p>
-        <p>
-          Remoto is more than work tool, it is a new way to think about work. Think outside the cubicle, be Remoto.
+          Remoto is more than work tool, it is a way of thinking about work. Think outside the cubicle, be Remoto.
         </p>
         <p>
           Yours,
@@ -179,7 +179,7 @@
           Fred Guth, Founder & CEO
         </p>
         <p>
-          P.S.  If you want to talk, just reach me at <a href="http://alpha.remoto.me/fred@remoto">alpha.remoto.me/fred@remoto.</a>
+          P.S.  If you want to talk, just reach me at <a href="http://alpha.remoto.me/fred@remoto">remoto.me/fred@remoto.</a>
         </p>
       </div>
       <div class="button">
@@ -188,13 +188,13 @@
     </section>
     <div class="cta-page">
       <h1>
-        We are happy to know you are interested
+        We are almost there...
       </h1>
       <p>
-        Remoto is still being developed, but if you want to be one of the beta testers send us your email and we'll get you an invite ;)
+        Remoto is still in beta, so you may find some blocks in the way.  But we won't charge for that ;)
       </p>
       <form>
-        <label for="email">Your email</label><input id="email" placeholder="yourname@company.com" type="text" /><input class="button" type="submit" value="Send" />
+        <label for="email">Your email</label><input id="email" placeholder="yourname@company.com" type="text" /><input class="button" type="submit" value="Feeling Brave" />
       </form>
       <div id="close-cta">
         Close
