small changes in copy

--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
       <div class="envelope"></div>
       <div class="letter">
         <h1>
-          A Letter from Fred
+          A Letter from our CEO
         </h1>
         <p>
-          Save yourself.  Save the world.
+          <b>Save yourself.  Save the world.</b>
         </p>
         <p>
           Life is short and the world is warming. What can you do about it? I bet you already are:  --Remoto-- Remote working.
