Typography & buttons refactored

--- a/index.html
+++ b/index.html
@@ -192,11 +192,12 @@
           We are happy to know you are interested
         </h1>
         <p>
-          Remoto is still being developed, but if you want to be one of the beta testers send us your email and we'll get you an invite ;)
+          Remoto is still being developed, but if you want to be one of the beta testers you can click the link below to sign up and create your team.
         </p>
-        <form>
-          <label for="email">Your email</label><input id="email" placeholder="yourname@company.com" type="text" /><input class="button" type="submit" value="Send" />
-        </form>
+        <p>
+          Keep in mind we are still on “alpha” phase, so there may be some bugs and inconveniences.
+        </p>
+        <a class="button" href="http://alpha.remoto.me">Be Brave</a><a class="button -cancel">No, Thanks</a>
         <div id="close-cta">
           Close
         </div>
