--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </section>
     <section class="section-pricing" id="pricing">
       <h1>
-        Plans that suit your needs
+        Simple Pricing.
       </h1>
       <div class="plans">
         <div class="plan">
@@ -62,7 +62,7 @@
             $0
           </h3>
           <p class="note">
-            Yeah! 🎉
+            Yeeah! 🎉
           </p>
           <a class="button -small">Start Free</a>
           <ul class="features">
@@ -154,11 +154,11 @@
         <h1>
           A Letter from our CEO
         </h1>
-        <p>
-          <b>Save yourself.  Save the world.</b>
+        <p class="-bold">
+          Save yourself. Save the world.
         </p>
         <p>
-          Life is short and the world is warming. What can you do about it? I bet you already are:  --Remoto-- Remote working.
+          Life is short and the world is warming. What can you do about it? I bet you already are: <span class="-strike">Remoto</span> Remote working.
         </p>
         <p>
           The nature of work has changed from a place you used to go to something you do with your mobile or laptop from anywhere. Everybody became a remote worker whether they realize it or not.  Working remotely allows us to be there for the ones we love and see the world, without ever having to commute.
