--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="navigation-menu">
       <a>Remoto</a><a class="link">800-736-6860</a><a class="link" href="#pricing">Pricing</a><a class="link" href="#product">Product</a>
     </nav>
-    <section class="section-hero">
+    <header class="section-hero">
       <h1>
         Keep your team close  and your clients closer
       </h1>
@@ -22,7 +22,21 @@
         Remoto is an enjoyable and productive solution for sales and support teams communicate with customers.
       </h4>
       <a class="button">Start Free</a>
-    </section>
+    </header>
+    <div class="cta-page">
+      <div class="container">
+        <h1>
+          We are almost there...
+        </h1>
+        <p>
+          Keep in mind we are still on “alpha” phase, so there may be some bugs and inconveniences.
+        </p>
+        <a class="button" href="http://alpha.remoto.me/auth/sign-up">Be Brave</a><a class="button -cancel">No, Thanks</a>
+        <div id="close-cta">
+          Close
+        </div>
+      </div>
+    </div>
     <section class="section-features" id="product">
       <div class="feature">
         <h2>
@@ -186,25 +200,29 @@
         Start Free
       </div>
     </section>
-    <div class="cta-page">
-      <div class="container">
-        <h1>
-          We are almost there...
-        </h1>
-        <p>
-          Keep in mind we are still on “alpha” phase, so there may be some bugs and inconveniences.
-        </p>
-        <a class="button" href="http://alpha.remoto.me/auth/sign-up">Be Brave</a><a class="button -cancel">No, Thanks</a>
-        <div id="close-cta">
-          Close
-        </div>
+    <footer class="section-footer">
+      <div class="column">
+        <a>Remoto</a><a>Blog</a><a>Facebook</a><a>Linkedin</a>
       </div>
-    </div>
-    <section class="section-footer">
-      <h1>
-        Footer
-      </h1>
-    </section>
+      <div class="column">
+        <h4>
+          Remoto
+        </h4>
+        <a>Features</a><a>Pricing</a>
+      </div>
+      <div class="column">
+        <h4>
+          Download
+        </h4>
+        <a>Desktop App</a><a>Mobile App</a>
+      </div>
+      <div class="column">
+        <h4>
+          Support
+        </h4>
+        <a>800-736-6860</a><a>hi@remoto.me</a><a href="terms-of-service.html" target="_blank">Terms of Service</a><a href="terms-of-service.html" target="_blank">Privacy</a>
+      </div>
+    </footer>
     <script src="js/scripts.js"></script>
   </body>
 </html>
