Remove 0800 from header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class="navigation-menu">
-      <a>Remoto</a><a class="link">800-736-6860</a><a class="link" href="#pricing">Pricing</a><a class="link" href="#product">Product</a>
+      <a>Remoto</a><a class="link" href="#pricing">Pricing</a><a class="link" href="#product">Product</a>
     </nav>
     <header class="section-hero">
       <h1>
