--- a/index.html
+++ b/index.html
@@ -182,9 +182,7 @@
           P.S.  If you want to talk, just reach me at <a href="http://beta.remoto.me/fred@remoto">remoto.me/fred@remoto.</a>
         </p>
       </div>
-      <div class="button" href="http://beta.remoto.me" target="_blank">
-        Start Free
-      </div>
+      <a class="button" href="http://beta.remoto.me" target="_blank">Start Free</a>
     </section>
     <script src="js/scripts.js"></script>
   </body>
