--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class="navigation-menu">
-      <a>Remoto</a><a class="link">800-736-6860</a><a class="link" href="#pricing">Pricing</a><a class="link" href="#product">Product</a>
+      <a>Remoto</a><a class="link" href="#pricing">Pricing</a><a class="link" href="#product">Product</a>
     </nav>
     <header class="section-hero">
       <h1>
@@ -21,22 +21,8 @@
       <h4>
         Remoto is an enjoyable and productive solution for sales and support teams communicate with customers.
       </h4>
-      <a class="button">Start Free</a>
+      <a class="button" href="http://beta.remoto.me" target="_blank">Start Free</a>
     </header>
-    <div class="cta-page">
-      <div class="container">
-        <h1>
-          We are almost there...
-        </h1>
-        <p>
-          Keep in mind we are still on “alpha” phase, so there may be some bugs and inconveniences.
-        </p>
-        <a class="button" href="http://alpha.remoto.me/auth/sign-up">Be Brave</a><a class="button -cancel">No, Thanks</a>
-        <div id="close-cta">
-          Close
-        </div>
-      </div>
-    </div>
     <section class="section-features" id="product">
       <div class="feature">
         <h2>
@@ -78,7 +64,7 @@
           <p class="note">
             Yeeah! 🎉
           </p>
-          <a class="button -small">Start Free</a>
+          <a class="button -small" href="http://beta.remoto.me" target="_blank">Start Free</a>
           <ul class="features">
             <li>
               Free Intra-company calls worldwide
@@ -91,7 +77,7 @@
             </li>
           </ul>
         </div>
-        <div class="plan">
+        <div class="plan -soon">
           <h2 class="name">
             Professional
           </h2>
@@ -101,7 +87,7 @@
           <p class="note">
             per active user, per month
           </p>
-          <a class="button -small">Buy Professional</a>
+          <a class="button -small">Available Soon…</a>
           <ul class="features">
             <li>
               All features from Free plan
@@ -120,7 +106,7 @@
             </li>
           </ul>
         </div>
-        <div class="plan">
+        <div class="plan -soon">
           <h2 class="name">
             Enterprise
           </h2>
@@ -130,7 +116,7 @@
           <p class="note">
             per active user, per month
           </p>
-          <a class="button -small">Buy Enterprise</a>
+          <a class="button -small">Available Soon…</a>
           <ul class="features">
             <li>
               All features from Professional plan
@@ -192,37 +178,9 @@
         <p class="signature">
           Fred Guth, Founder & CEO
         </p>
-        <p>
-          P.S.  If you want to talk, just reach me at <a href="http://alpha.remoto.me/fred@remoto">remoto.me/fred@remoto.</a>
-        </p>
       </div>
-      <div class="button">
-        Start Free
-      </div>
+      <a class="button" href="http://beta.remoto.me" target="_blank">Start Free</a>
     </section>
-    <footer class="section-footer">
-      <div class="column">
-        <a>Remoto</a><a>Blog</a><a>Facebook</a><a>Linkedin</a>
-      </div>
-      <div class="column">
-        <h4>
-          Remoto
-        </h4>
-        <a>Features</a><a>Pricing</a>
-      </div>
-      <div class="column">
-        <h4>
-          Download
-        </h4>
-        <a>Desktop App</a><a>Mobile App</a>
-      </div>
-      <div class="column">
-        <h4>
-          Support
-        </h4>
-        <a>800-736-6860</a><a>hi@remoto.me</a><a href="terms-of-service.html" target="_blank">Terms of Service</a><a href="terms-of-service.html" target="_blank">Privacy</a>
-      </div>
-    </footer>
     <script src="js/scripts.js"></script>
   </body>
 </html>
