action should be signup

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <p class="note">
             Yeeah! 🎉
           </p>
-          <a class="button -small" href="http://beta.remoto.me" target="_blank">Start Free</a>
+          <a class="button -small" href="http://beta.remoto.me/auth/sign-up" target="_blank">Start Free</a>
           <ul class="features">
             <li>
               Free Intra-company calls worldwide
