--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h4>
         Remoto is an enjoyable and productive solution for sales and support teams communicate with customers.
       </h4>
-      <a class="button" href="http://beta.remoto.me" target="_blank">Start Free</a>
+      <a class="button" href="http://beta.remoto.me/auth/sign-up" target="_blank">Start Free</a>
     </header>
     <section class="section-features" id="product">
       <div class="feature">
@@ -179,7 +179,7 @@
           Fred Guth, Founder & CEO
         </p>
       </div>
-      <a class="button" href="http://beta.remoto.me" target="_blank">Start Free</a>
+      <a class="button" href="http://beta.remoto.me/auth/sign-up" target="_blank">Start Free</a>
     </section>
     <script src="js/scripts.js"></script>
   </body>
