--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -16,7 +16,7 @@
         Customer Terms of Service
       </h1>
       <h3>
-        
+        Effective: November 17, 2016
       </h3>
       <p>
         These Customer Terms of Service (the “Customer Terms”) describe your rights and responsibilities when using our online workplace productivity tools and platform (the “Services”). Please read them carefully. If you are a Customer (defined below), these Customer Terms govern your access and use of our Services. If you are being invited to a team set up by a Customer, the User Terms of Service (the “User Terms” ) govern your access and use of the Services. We are grateful you’re here.
