🚧 Style .section-legal

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -11,7 +11,7 @@
     <link href="./style/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <section>
+    <section class="section-legal">
       <h1>
         Remoto Terms & Policies
       </h1>
