Gulp markup files

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class="navigation-menu">
-      <a>Remoto</a><a class="link" href="http://beta.remoto.me/auth/sign-in" target="_blank">Sign-in</a><a class="link" href="#pricing">Pricing</a><a class="link" href="#product">Product</a>
+      <a>Remoto</a><a class="link" href="https://beta.remoto.me/auth/sign-in" target="_blank">Sign-in</a><a class="link" href="#pricing">Pricing</a><a class="link" href="#product">Product</a>
     </nav>
     <header class="section-hero">
       <h1>
@@ -21,7 +21,7 @@
       <h4>
         Remoto is an enjoyable and productive solution for sales and support teams communicate with customers.
       </h4>
-      <a class="button" href="http://beta.remoto.me/auth/sign-up" target="_blank">Start Free</a>
+      <a class="button" href="https://beta.remoto.me/auth/sign-up" target="_blank">Start Free</a>
     </header>
     <section class="section-features" id="product">
       <div class="feature">
@@ -64,7 +64,7 @@
           <p class="note">
             Yeeah! 🎉
           </p>
-          <a class="button -small" href="http://beta.remoto.me/auth/sign-up" target="_blank">Start Free</a>
+          <a class="button -small" href="https://beta.remoto.me/auth/sign-up" target="_blank">Start Free</a>
           <ul class="features">
             <li>
               Free Intra-company calls worldwide
@@ -179,7 +179,7 @@
           Fred Guth, Founder & CEO
         </p>
       </div>
-      <a class="button" href="http://beta.remoto.me/auth/sign-up" target="_blank">Start Free</a>
+      <a class="button" href="https://beta.remoto.me/auth/sign-up" target="_blank">Start Free</a>
     </section>
     <script src="js/scripts.js"></script>
   </body>
