--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -82,11 +82,38 @@
         Privacy Policy
       </h2>
       <h3>
-        Acceptable Use Policy
+        Information You Provide to Us
       </h3>
-      <h4>
+      <p>
+        We receive and store any information you knowingly provide to us. For example, through the registration process and/or through your account settings, we may collect Personal Information such as your name, email address and phone number.
+      </p>
+      <p>
+        We may communicate with you if you’ve provided us the means to do so. For example, if you’ve given us your email address, we may email you about your use of the Services. Also, we may receive a confirmation when you open an email from us. This confirmation helps us make our communications with you more interesting and improve our services.
+      </p>
+      <h3>
+        Information Collected Automatically
+      </h3>
+      <p>
+        Whenever you interact with our Services, we automatically receive and record information on our server logs from your browser or device, which may include your IP address, device identification, “cookie” information, the type of browser and/or device you’re using to access our Services, and the page or feature you requested. “Cookies” are identifiers we transfer to your browser or device that allow us to recognize your browser or device and tell us how and when pages and features in our Services are visited and by how many people. You may be able to change the preferences on your browser or device to prevent or limit your device’s acceptance of cookies, but this may prevent you from taking advantage of some of our features.
+      </p>
+      <p>
+        This Privacy Policy does not cover the use of cookies by any third parties, and we aren’t responsible for their privacy policies and practices.
+      </p>
+      <p>
+        We may use this data to customize content for you that we think you might like, based on your usage patterns. We may also use it to improve the Services – for example, this data can tell us how often users use a particular feature of the Services, and we can use that knowledge to make the Services interesting to as many users as possible.
+      </p>
+      <h3>
+        Information Collected From Other Websites and Do Not Track Policy
+      </h3>
+      <p>
+        Through cookies we place on your browser or device, we may collect information about your online activity after you leave our Services. Just like any other usage information we collect, this information allows us to improve the Services and customize your online experience, and otherwise as described in this Privacy Policy. Your browser may offer you a “Do Not Track” option, which allows you to signal to operators of websites and web applications and services (including behavioral advertising services) that you do not wish such operators to track certain of your online activities over time and/or across different websites. Our Services do not support Do Not Track requests at this time, which means that we collect information about your online activity both while you are using the Services and after you leave our Services.
+      </p>
+      <h2>
+        Acceptable Use Policy
+      </h2>
+      <h3>
         Do:
-      </h4>
+      </h3>
       <ul>
         <li>
           comply with all Terms-of-Service , including the terms of this Acceptable Use Policy;
@@ -110,9 +137,9 @@
           promptly notify us if you become aware of or reasonably suspect any illegal or unauthorized activity or a security breach involving your accounts or teams, including any loss, theft, or unauthorized disclosure or use of a username, password, or account.
         </li>
       </ul>
-      <h4>
+      <h3>
         Don't:
-      </h4>
+      </h3>
       <ul>
         <li>
           permit any third party that is not an Authorized User to access or use a username or password for the Services;
@@ -168,7 +195,6 @@
         <li>
           authorize, permit, enable, induce or encourage any third party to do any of the above.
         </li>
-        <Copyright></Copyright>
       </ul>
       <h2>
         Contacting Remoto
