🚧 Start footer structure

--- a/index.html
+++ b/index.html
@@ -181,6 +181,29 @@
       </div>
       <a class="button" href="https://beta.remoto.me/auth/sign-up" target="_blank">Start Free</a>
     </section>
+    <footer class="section-footer">
+      <div class="column">
+        <a href="#">Remoto</a><a href="#">Blog</a><a href="#">Facebook</a><a href="#">Linkedin</a>
+      </div>
+      <div class="column">
+        <h4>
+          Remoto
+        </h4>
+        <a href="#">Features</a><a href="#">Pricing</a>
+      </div>
+      <div class="column">
+        <h4>
+          Download
+        </h4>
+        <a href="#">Desktop App</a><a href="#">Mobile App</a>
+      </div>
+      <div class="column">
+        <h4>
+          Support
+        </h4>
+        <a href="#">800-736-6860</a><a mailto="hi@remoto.me">hi@remoto.me</a><a href="terms-of-service.html" target="_blank">Terms of Service</a><a href="terms-of-service.html" target="_blank">Privacy</a>
+      </div>
+    </footer>
     <script src="js/scripts.js"></script>
   </body>
 </html>
